erDiagram

user{
id int pk
name varchar(200)
cedula varchar(10)
telefono varchar(15)
email varchar(100)
rol varchar(100)
}

evento{
id int pk
nombre varchar(250)
fecha_inicio datetime
lugar varchar(100)
descripcion text
estado varchar(100)
}

asistencia{
id int pk
id_user int fk
id_evento int fk
estado varchar(100)
fecha_entrada datetime
fecha_salida datetime
}

user ||--o{ asistencia: id_user
evento ||--o{ asistencia: id_user